# C--

./: .gitignore  LICENSE  README.md
.github/workflows/: cmake.yml  glitch_art.yml  particle_sim.yml
glitch_art/: CMakeLists.txt
glitch_art/include/: chromatic_aberration.h  pixel_sorter.h
glitch_art/src/: main.cpp  stb_impl.cpp
particle_sim/: CMakeLists.txt
particle_sim/include/: Particle.h  ParticleSystem.h
particle_sim/src/: ParticleSystem.cpp  main.cpp
smoke_test/: CMakeLists.txt  main.cpp
thirsty-noyce/: README.md
thirsty-noyce/tickproc/: CMakeLists.txt
thirsty-noyce/tickproc/bench/: benchmark.cpp
thirsty-noyce/tickproc/include/: csv_parser.h  data_processor.h  mapped_file.h  pipeline.h  thread_safe_queue.h  tick_row.h  worker_pool.h
thirsty-noyce/tickproc/scripts/: generate_csv.py
thirsty-noyce/tickproc/src/: csv_parser.cpp  main.cpp  mapped_file.cpp  server.cpp
thirsty-noyce/tickproc/tests/: test_data_processor.cpp  test_parser.cpp  test_queue.cpp
tickproc/: CMakeLists.txt
tickproc/src/: csv_parser.cpp  main.cpp
